<resources>
    <string name="app_name">Diary</string>
    <string name="heading">Speak To Your Diary</string>
    <string name="password">Password</string>
    <string name="open">Open</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="prepass">Previous password</string>
    <string name="newpass">New password</string>
    <string name="ok">OK</string>
    <string name="setlang"> Set language</string>
    <string name="set">Set</string>
    <string name="saved">Saved</string>
    <string name="selected">Selected</string>
    <string name="speak">Speak Now</string>
    <string name="english">English</string>
    <string name="kannada">Kannada</string>






   <string name="prompt_email">Email</string>
    <string name="login_bn_label">Login</string>
    <string name="sign_up_text">New user? Sign Up</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_con_password">Confirm Password</string>
    <string name="reg_bn_label">Register</string>
    <string-array name="language_arrays">
        <item>English</item>
        <item>Kannada</item>
    </string-array>
    <string-array name="language_layout">
        <item>English</item>
        <item>Kannada</item>
    </string-array>
</resources>
